[package]
name = "puissance-4"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
console = "0.16.1"
criterion = "0.7.0"
once_cell = "1.21.3"
rand = "0.9.2"
rayon = "1.11.0"
rstest = "0.26.1"
ux = "0.1.6"

[[bench]]
name = "perft_bench"
harness = false
path = "src/benches/perft_bench.rs"
